# InsuranceStocks

./: app.py  insurance_stock_app.py  pyproject.toml  requirements.txt
assets/: bootstrap.css  convex.css
rsconnect-python/: InsuranceStocks.json
