[tool.poetry]
name = "insurancestocks"
version = "0.1.0"
description = ""
authors = ["Kiy98 <richard.kiy@convexin.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dash-mantine-components = "^0.12.0"
pandas = "^1.5.3"
yahooquery = "^2.3.1"
plotly-express = "^0.4.1"
dash = "^2.9.1"
millify = "^0.1.1"
dash-iconify = "^0.1.2"
dash-extensions = "^0.1.13"
orjson = "^3.8.8"
rsconnect = "^0.1.3"
dash-trich-components = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
